Upgrade Karaf to 4.4.8